Updated HTML file

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    Content
+    <main>
+        <div>
+            Right column
+        </div>
+        <div>
+            Left column
+        </div>
+    </main>
 </body>
 </html>
