Updated HTML and CSS

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <main>
         <div>
-            Right column
+            LEFT COLUMN
         </div>
         <div>
-            Left column
+            RIGHT COLUMN
         </div>
     </main>
 </body>
