--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    <main>
-        <div>
-            LEFT COLUMN
+    <main class="container">
+        <div class="left-column">
+            <h1 class="main-title">Sign Up</h1>
+            <div class="bottom-links">
+                <a href="#" class="link">Privacy policy</a>
+                <span class="symbol">&amp;</span>
+                <a href="#" class="link">Terms of service</a>
+            </div>
         </div>
-        <div>
+        <div class="right-column">
             RIGHT COLUMN
         </div>
     </main>
