Added IMG class to HTML

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <main class="container">
+        <div class="img"></div>
         <div class="left-column">
             <h1 class="main-title">Sign Up</h1>
             <div class="bottom-links">
