--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
+    <div class="top"></div>
     <main class="container">
-        <div class="img"></div>
         <div class="left-column">
             <h1 class="main-title">Sign Up</h1>
             <div class="bottom-links">
