--- a/sign in/index.html
+++ b/sign in/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
 
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
     <main class="container">
         <div class="left-column">
-            <h1 class="main-title">Sign Up</h1>
+            <h1 class="main-title">Sign In</h1>
             <div class="bottom-links">
                 <a href="#" class="link">Privacy policy</a>
                 <span class="symbol">&amp;</span>
@@ -22,10 +22,6 @@
             <div class="close">x</div>
             <form class="form">
                 <div class="form-row">
-                    <label for="username">Username</label>
-                    <input id="username" type="text" placeholder="Username" required>
-                </div>
-                <div class="form-row">
                     <label for="email">Email</label>
                     <input id="email" type="email" placeholder="Email" required>
                 </div>
@@ -34,13 +30,9 @@
                     <input id="password" type="password" placeholder="Password" required>
                 </div>
                 <div class="form-row">
-                    <label for="re-pass">Repeat password</label>
-                    <input id="re-pass" type="password" placeholder="Repeat password" required>
-                </div>
-                <div class="form-row">
-                    <button type="submit">Get started</button>
+                    <button type="submit">Log In</button>
                     <span>or</span>
-                    <a href="./sign in/">Sign In</a>
+                    <a href="../Forgot password/">Forgot password?</a>
                 </div>
             </form>
         </div>
