--- a/Forgot password/index.html
+++ b/Forgot password/index.html
@@ -11,7 +11,7 @@
 <body>
     <main class="container">
         <div class="left-column">
-            <h1 class="main-title">Sign Up</h1>
+            <h1 class="main-title">Forgot password</h1>
             <div class="bottom-links">
                 <a href="#" class="link">Privacy policy</a>
                 <span class="symbol">&amp;</span>
@@ -28,7 +28,7 @@
                 <div class="form-row">
                     <button type="submit">Recover</button>
                     <span>or</span>
-                    <a href="/index.html">Sign In</a>
+                    <a href="../">Sign In</a>
                 </div>
             </form>
         </div>
