--- a/forgot-password/index.html
+++ b/forgot-password/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up</title>
+    <title>Forgot password</title>
 
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
     <main class="container">
         <div class="left-column">
-            <h1 class="main-title">Sign Up</h1>
+            <h1 class="main-title">Forgot password?</h1>
             <div class="bottom-links">
                 <a href="#" class="link">Privacy policy</a>
                 <span class="symbol">&amp;</span>
@@ -22,25 +22,13 @@
             <div class="close">x</div>
             <form class="form">
                 <div class="form-row">
-                    <label for="username">Username</label>
-                    <input id="username" type="text" placeholder="Username" required>
-                </div>
-                <div class="form-row">
                     <label for="email">Email</label>
                     <input id="email" type="email" placeholder="Email" required>
                 </div>
                 <div class="form-row">
-                    <label for="password">Password</label>
-                    <input id="password" type="password" placeholder="Password" required>
-                </div>
-                <div class="form-row">
-                    <label for="re-pass">Repeat password</label>
-                    <input id="re-pass" type="password" placeholder="Repeat password" required>
-                </div>
-                <div class="form-row">
-                    <button type="submit">Get started</button>
+                    <button type="submit">Recover</button>
                     <span>or</span>
-                    <a href="./sign-in/">Sign In</a>
+                    <a href="../">Sign Up</a>
                 </div>
             </form>
         </div>
